--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -46,255 +46,58 @@
         android:padding="16dp"
         android:orientation="vertical">
 
-        <androidx.core.widget.NestedScrollView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scrollbars="vertical"
-            android:scrollbarFadeDuration="@integer/material_motion_duration_medium_1">
+        <!--Caretaker Tenant Toggle-->
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="8dp"
+            android:background="@drawable/rounded_corners"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="24dp"
+            android:orientation="horizontal">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
+            <RelativeLayout
+                android:layout_width="125dp"
+                android:layout_height="45dp"
+                android:background="@drawable/rounded_corners_active">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/create_account"
-                    android:textSize="22sp"
+                    android:layout_centerInParent="true"
+                    android:fontFamily="@font/poppins_regular"
                     android:includeFontPadding="false"
-                    android:fontFamily="@font/poppins_bold"
+                    android:text="Tenant"
                     android:textColor="?attr/textBlack700"
-                    android:textStyle="bold"
-                    android:layout_marginTop="8dp"/>
+                    android:textStyle="bold" />
 
-                <!--Username Create-->
-                <LinearLayout
-                    android:layout_width="match_parent"
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="125dp"
+                android:layout_height="45dp"
+                android:background="@drawable/rounded_corners">
+
+                <TextView
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="32dp"
-                    android:gravity="center_vertical"
-                    android:orientation="horizontal">
+                    android:layout_centerInParent="true"
+                    android:fontFamily="@font/poppins_regular"
+                    android:includeFontPadding="false"
+                    android:text="Caretaker"
+                    android:textColor="?attr/textBlack700"
+                    android:textStyle="bold" />
 
-                    <ImageView
-                        android:layout_width="16dp"
-                        android:layout_height="16dp"
-                        android:src="@drawable/ic_baseline_person_24"
-                        app:tint="?attr/textBlack100"/>
+            </RelativeLayout>
 
-                    <com.google.android.material.textfield.TextInputLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="64dp"
-                        app:hintEnabled="false"
-                        android:padding="0dp"
-                        android:layout_marginStart="16dp"
-                        app:passwordToggleEnabled="false"
-                        app:boxStrokeWidth="0dp"
-                        app:passwordToggleTint="?attr/colorPrimary">
+        </LinearLayout>
 
-                        <com.google.android.material.textfield.TextInputEditText
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:inputType="text"
-                            android:fontFamily="@font/poppins_regular"
-                            android:lines="1"
-                            android:hint="@string/username"
-                            android:textSize="14sp"
-                            android:textColor="?attr/textBlack700"
-                            android:background="@drawable/rounded_edit_text"
-                            android:id="@+id/usernameSignUp"
-                            android:layout_marginTop="16dp"
-                            android:padding="0dp"/>
-
-                    </com.google.android.material.textfield.TextInputLayout>
-
-
-                </LinearLayout>
-
-                <!--Phone Number Create-->
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="32dp"
-                    android:gravity="center_vertical"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        android:layout_width="16dp"
-                        android:layout_height="16dp"
-                        android:src="@drawable/ic_baseline_phone_24"
-                        app:tint="?attr/textBlack100"/>
-
-                    <com.google.android.material.textfield.TextInputLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="64dp"
-                        app:hintEnabled="false"
-                        android:padding="0dp"
-                        android:layout_marginStart="16dp"
-                        app:passwordToggleEnabled="false"
-                        app:boxStrokeWidth="0dp"
-                        app:passwordToggleTint="?attr/colorPrimary">
-
-                        <com.google.android.material.textfield.TextInputEditText
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:inputType="phone"
-                            android:fontFamily="@font/poppins_regular"
-                            android:lines="1"
-                            android:hint="Phone Number"
-                            android:textSize="14sp"
-                            android:textColor="?attr/textBlack700"
-                            android:background="@drawable/rounded_edit_text"
-                            android:id="@+id/phoneSignUp"
-                            android:layout_marginTop="16dp"
-                            android:padding="0dp"/>
-
-                    </com.google.android.material.textfield.TextInputLayout>
-
-
-                </LinearLayout>
-
-                <!--Email Create-->
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_vertical"
-                    android:layout_marginTop="32dp"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        android:layout_width="16dp"
-                        android:layout_height="16dp"
-                        android:src="@drawable/at_solid"
-                        app:tint="?attr/textBlack100"/>
-
-                    <com.google.android.material.textfield.TextInputLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="64dp"
-                        app:hintEnabled="false"
-                        android:padding="0dp"
-                        android:layout_marginStart="16dp"
-                        app:passwordToggleEnabled="false"
-                        app:boxStrokeWidth="0dp"
-                        app:passwordToggleTint="?attr/colorPrimary">
-
-                        <com.google.android.material.textfield.TextInputEditText
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:inputType="textEmailAddress"
-                            android:fontFamily="@font/poppins_regular"
-                            android:lines="1"
-                            android:hint="Email Address"
-                            android:textSize="14sp"
-                            android:textColor="?attr/textBlack700"
-                            android:background="@drawable/rounded_edit_text"
-                            android:id="@+id/emailSignUp"
-                            android:layout_marginTop="16dp"
-                            android:padding="0dp"/>
-
-                    </com.google.android.material.textfield.TextInputLayout>
-
-
-                </LinearLayout>
-
-                <!--Password Create-->
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="32dp"
-                    android:gravity="center_vertical"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        android:layout_width="16dp"
-                        android:layout_height="16dp"
-                        android:src="@drawable/key_solid"
-                        app:tint="?attr/textBlack100"/>
-
-                    <com.google.android.material.textfield.TextInputLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        app:hintEnabled="false"
-                        android:padding="0dp"
-                        app:boxStrokeWidth="0dp"
-                        android:layout_marginStart="16dp"
-                        app:passwordToggleEnabled="true"
-                        app:passwordToggleTint="?attr/colorPrimary">
-
-                        <com.google.android.material.textfield.TextInputEditText
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:inputType="textPassword"
-                            android:fontFamily="@font/poppins_regular"
-                            android:lines="1"
-                            android:hint="@string/password_hint"
-                            android:textSize="14sp"
-                            android:textColor="?attr/textBlack700"
-                            android:background="@drawable/rounded_edit_text"
-                            android:id="@+id/passwordSignUp"
-                            android:layout_marginTop="16dp"
-                            android:padding="0dp"/>
-
-                    </com.google.android.material.textfield.TextInputLayout>
-
-                </LinearLayout>
-
-                <!--Password Confirm Create-->
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="32dp"
-                    android:gravity="center_vertical"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        android:layout_width="16dp"
-                        android:layout_height="16dp"
-                        android:src="@drawable/key_solid"
-                        app:tint="?attr/textBlack100"/>
-
-                    <com.google.android.material.textfield.TextInputLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        app:hintEnabled="false"
-                        android:padding="0dp"
-                        app:boxStrokeWidth="0dp"
-                        android:layout_marginStart="16dp"
-                        app:passwordToggleEnabled="true"
-                        app:passwordToggleTint="?attr/colorPrimary">
-
-                        <com.google.android.material.textfield.TextInputEditText
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:inputType="textPassword"
-                            android:fontFamily="@font/poppins_regular"
-                            android:lines="1"
-                            android:hint="Confirm password"
-                            android:textSize="14sp"
-                            android:textColor="?attr/textBlack700"
-                            android:background="@drawable/rounded_edit_text"
-                            android:id="@+id/passwordConfirmSignUp"
-                            android:layout_marginTop="16dp"
-                            android:padding="0dp"/>
-
-                    </com.google.android.material.textfield.TextInputLayout>
-
-                </LinearLayout>
-
-                <androidx.appcompat.widget.AppCompatButton
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:background="@drawable/sign_in_button"
-                    android:id="@+id/signUpButton"
-                    android:elevation="10dp"
-                    android:text="Create Account"
-                    android:textColor="@color/text_white_900"
-                    android:textAllCaps="false"
-                    android:layout_marginTop="32dp" />
-
-            </LinearLayout>
-
-        </androidx.core.widget.NestedScrollView>
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:padding="8dp"
+            android:id="@+id/signUpFragmentContainer"/>
 
     </LinearLayout>
 
