--- a/app/src/main/res/layout/caretaker_new_house_bottomsheet.xml
+++ b/app/src/main/res/layout/caretaker_new_house_bottomsheet.xml
@@ -7,12 +7,25 @@
     android:padding="16dp"
     android:layout_height="match_parent">
 
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New House"
+        android:textStyle="bold"
+        android:textSize="16sp"
+        android:textColor="?attr/textBlack700"
+        android:fontFamily="@font/poppins_regular"
+        android:includeFontPadding="false"
+        android:layout_gravity="center_horizontal"/>
+
     <com.makeramen.roundedimageview.RoundedImageView
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_gravity="center_horizontal"
         android:id="@+id/add_house_image"
         app:riv_corner_radius="16dp"
+        android:layout_marginTop="24dp"
         android:src="@drawable/image_regular"
         app:tint="?attr/textBlack300"/>
 
@@ -25,7 +38,6 @@
         app:passwordToggleEnabled="false"
         app:boxStrokeWidth="0dp"
         android:layout_marginTop="16dp"
-        android:layout_marginStart="16dp"
         app:passwordToggleTint="?attr/colorPrimary">
 
         <com.google.android.material.textfield.TextInputEditText
@@ -43,5 +55,70 @@
             android:padding="0dp"/>
 
     </com.google.android.material.textfield.TextInputLayout>
+
+    <!--Status, occupied or vacant-->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="8dp"
+        android:gravity="center"
+        android:layout_marginTop="16dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Status"
+            android:textStyle="bold"
+            android:fontFamily="@font/poppins_regular"
+            android:textColor="?attr/textBlack300"
+            android:layout_marginEnd="16dp"/>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="8dp"
+            android:background="@drawable/rounded_corners"
+            android:orientation="horizontal">
+
+            <RelativeLayout
+                android:layout_width="100dp"
+                android:layout_height="45dp"
+                android:id="@+id/tenantToggle"
+                android:background="@drawable/rounded_corners_active">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:fontFamily="@font/poppins_regular"
+                    android:includeFontPadding="false"
+                    android:text="Vacant"
+                    android:textColor="?attr/textBlack700"
+                    android:textStyle="bold" />
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="100dp"
+                android:layout_height="45dp"
+                android:id="@+id/caretakerToggle"
+                android:background="@drawable/rounded_corners">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:fontFamily="@font/poppins_regular"
+                    android:includeFontPadding="false"
+                    android:text="Occupied"
+                    android:textColor="?attr/textBlack700"
+                    android:textStyle="bold" />
+
+            </RelativeLayout>
+
+        </LinearLayout>
+
+    </LinearLayout>
 
 </LinearLayout>
