--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:background="?attr/colorOnPrimary"
@@ -7,75 +7,20 @@
     android:layout_height="match_parent"
     tools:context=".activities.MainActivity">
 
-    <!--Background Frame layout-->
-    <LinearLayout
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:id="@+id/fragments_container"
+        app:layout_anchor="@id/bottom_navigation_view"
+        app:layout_anchorGravity="bottom"/>
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:background="@color/accent_blue_dull"
-            android:layout_weight="2"/>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:background="?attr/colorOnPrimary"
-            android:layout_weight="3"/>
-
-    </LinearLayout>
-
-
-    <!--Main Content-->
-    <LinearLayout
+    <!--Bottom navigationview-->
+    <com.google.android.material.bottomnavigation.BottomNavigationView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <!--Header-->
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:padding="16dp"
-            android:orientation="horizontal">
-
-            <com.makeramen.roundedimageview.RoundedImageView
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:id="@+id/drawer_menu"
-                android:src="@drawable/bars_solid"/>
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="2"
-                android:gravity="center"
-                android:id="@+id/houseops_title"
-                android:text="HouseOps"
-                android:textStyle="bold"
-                android:textSize="16sp"
-                android:textColor="@color/text_white_900"
-                android:fontFamily="@font/poppins_regular"/>
-
-            <com.makeramen.roundedimageview.RoundedImageView
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:id="@+id/user_profile"
-                android:scaleType="centerCrop"
-                android:src="@drawable/undraw_pic_profile_re_1865"
-                app:riv_corner_radius="100dp"/>
-
-        </LinearLayout>
-
-        <!--Search View-->
-        <androidx.appcompat.widget.SearchView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-
-    </LinearLayout>
+        android:layout_height="wrap_content"
+        android:id="@+id/bottom_navigation_view"
+        android:layout_gravity="bottom"
+        app:menu="@menu/bottom_nav_menu"/>
 
 
-</FrameLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
