--- a/app/src/main/res/layout/caretaker_new_house_bottomsheet.xml
+++ b/app/src/main/res/layout/caretaker_new_house_bottomsheet.xml
@@ -29,7 +29,6 @@
                 android:textStyle="bold"
                 android:textSize="16sp"
                 android:textColor="?attr/textBlack700"
-                android:fontFamily="@font/poppins_regular"
                 android:includeFontPadding="false"
                 android:layout_marginTop="16dp"
                 android:layout_gravity="center_horizontal"/>
@@ -100,7 +99,6 @@
                     android:layout_height="match_parent"
                     android:inputType="text"
                     android:gravity="center"
-                    android:fontFamily="@font/poppins_regular"
                     android:lines="1"
                     android:hint="House Number"
                     android:textSize="14sp"
@@ -125,7 +123,7 @@
                     android:layout_height="wrap_content"
                     android:text="Status"
                     android:textStyle="bold"
-                    android:fontFamily="@font/poppins_regular"
+                    android:includeFontPadding="false"
                     android:textColor="?attr/textBlack300"
                     android:layout_marginEnd="16dp"/>
 
@@ -146,7 +144,6 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_centerInParent="true"
-                            android:fontFamily="@font/poppins_regular"
                             android:includeFontPadding="false"
                             android:text="Vacant"
                             android:textColor="?attr/textBlack700"
@@ -164,7 +161,6 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_centerInParent="true"
-                            android:fontFamily="@font/poppins_regular"
                             android:includeFontPadding="false"
                             android:text="Occupied"
                             android:textColor="?attr/textBlack700"
@@ -176,6 +172,75 @@
 
             </LinearLayout>
 
+            <!--Pricing per month-->
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Price"
+                android:textStyle="bold"
+                android:textSize="16sp"
+                android:textColor="?attr/textBlack700"
+                android:includeFontPadding="false"
+                android:layout_marginTop="16dp"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:layout_marginTop="16dp">
+
+                <!--Ksh Text-->
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Ksh"
+                    android:textStyle="bold"
+                    android:textSize="14sp"
+                    android:textColor="?attr/textBlack700"
+                    android:includeFontPadding="false"/>
+
+                <!--House Price-->
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_width="0dp"
+                    android:layout_height="56dp"
+                    android:layout_weight="2"
+                    android:layout_marginStart="16dp"
+                    app:hintEnabled="false"
+                    android:padding="0dp"
+                    app:passwordToggleEnabled="false"
+                    app:boxStrokeWidth="0dp"
+                    app:passwordToggleTint="?attr/colorPrimary">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:inputType="number"
+                        android:fontFamily="@font/poppins_regular"
+                        android:lines="1"
+                        android:hint="Price"
+                        android:textSize="14sp"
+                        android:textColor="?attr/textBlack700"
+                        android:background="@drawable/rounded_edit_text"
+                        android:id="@+id/housePrice"
+                        android:padding="0dp"/>
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <TextView
+                    android:id="@+id/house_card_price_per_month_text"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:includeFontPadding="false"
+                    android:text="/mo"
+                    android:textStyle="bold"
+                    android:layout_marginStart="16dp"
+                    android:textColor="?attr/textBlack100"
+                    android:textSize="14sp" />
+
+            </LinearLayout>
+
             <!--Type of house: one bedroom, 2 bedroom e.t.c-->
             <TextView
                 android:layout_width="wrap_content"
@@ -184,9 +249,8 @@
                 android:textStyle="bold"
                 android:textSize="16sp"
                 android:textColor="?attr/textBlack700"
-                android:fontFamily="@font/poppins_regular"
                 android:includeFontPadding="false"
-                android:layout_marginTop="16dp"/>
+                android:layout_marginTop="24dp"/>
 
             <HorizontalScrollView
                 android:layout_width="match_parent"
@@ -212,7 +276,6 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_centerInParent="true"
-                            android:fontFamily="@font/poppins_regular"
                             android:includeFontPadding="false"
                             android:text="Single"
                             android:textColor="?attr/textBlack700"
@@ -232,7 +295,6 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_centerInParent="true"
-                            android:fontFamily="@font/poppins_regular"
                             android:includeFontPadding="false"
                             android:text="Bedsitter"
                             android:textColor="?attr/textBlack700"
@@ -252,7 +314,6 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_centerInParent="true"
-                            android:fontFamily="@font/poppins_regular"
                             android:includeFontPadding="false"
                             android:text="One Bedroom"
                             android:textColor="?attr/textBlack700"
@@ -272,7 +333,6 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_centerInParent="true"
-                            android:fontFamily="@font/poppins_regular"
                             android:includeFontPadding="false"
                             android:text="Two Bedroom"
                             android:textColor="?attr/textBlack700"
@@ -293,7 +353,6 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_centerInParent="true"
-                            android:fontFamily="@font/poppins_regular"
                             android:includeFontPadding="false"
                             android:text="Three Bedroom"
                             android:textColor="?attr/textBlack700"
@@ -314,7 +373,6 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_centerInParent="true"
-                            android:fontFamily="@font/poppins_regular"
                             android:includeFontPadding="false"
                             android:text="Mansion"
                             android:textColor="?attr/textBlack700"
@@ -334,7 +392,6 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_centerInParent="true"
-                            android:fontFamily="@font/poppins_regular"
                             android:includeFontPadding="false"
                             android:text="Other"
                             android:textColor="?attr/textBlack700"
@@ -353,7 +410,6 @@
                 android:textStyle="bold"
                 android:textSize="16sp"
                 android:textColor="?attr/textBlack700"
-                android:fontFamily="@font/poppins_regular"
                 android:includeFontPadding="false"
                 android:layout_marginTop="32dp"/>
 
@@ -370,7 +426,6 @@
                 android:textColor="?attr/textBlack700"
                 android:textStyle="normal"
                 android:textSize="14sp"
-                android:fontFamily="@font/poppins_regular"
                 android:includeFontPadding="false"
                 android:background="@drawable/rounded_edit_text"/>
 
